--- a/src/index.scss
+++ b/src/index.scss
@@ -35,7 +35,7 @@ body {
         }
       }
       div.app-body {
-        margin: 2rem 0rem 2rem 0rem;
+        margin: 2rem 6% 2rem 6%;
       }
       div.app-footer {
         font-family: "Pacifico";
@@ -43,7 +43,7 @@ body {
         color: white;
         text-align: center;
         background-color: $BASE_COLOR;
-        width: 80%;
+        width: 90%;
         margin: auto;
         padding: 0.8rem;
         -webkit-border-radius: 11px;
