--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,12 @@ body {
       }
       div.app-body {
         margin: 2rem 6% 2rem 6%;
+        div.last-movements {
+          display: inline-block;
+        }
+        div.current-position {
+          display: inline-block;
+        }
       }
       div.app-footer {
         font-family: "Pacifico";
