--- a/src/index.scss
+++ b/src/index.scss
@@ -35,8 +35,9 @@ body {
         }
       }
       div.app-body {
-        margin: 2rem 6% 2rem 6%;
+        margin: 2rem 0px 2rem 5.1rem;
         div.last-movements {
+          margin: 0rem 1rem 0rem 0rem;
           display: inline-block;
         }
         div.current-position {
