--- a/src/index.scss
+++ b/src/index.scss
@@ -67,3 +67,15 @@ body {
     }
   }
 }
+
+center-aligned {
+  text-align: center !important;
+}
+
+right-aligned {
+  text-align: right !important;
+}
+
+left-aligned {
+  text-align: left !important;
+}
